--- a/src/main/react-frontend/src/index.css
+++ b/src/main/react-frontend/src/index.css
@@ -1,4 +1,5 @@
 body {
+    background-color: #c9c4bd;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
