--- a/src/main/react-frontend/src/components/css/Login.css
+++ b/src/main/react-frontend/src/components/css/Login.css
@@ -1,4 +1,12 @@
-#homeline{
+#homeline1 {
+	text-align: center;
+	margin-top: 25%;
+	margin-left: -50%;
+	font-weight: 100%;
+
+}
+
+#homeline2 {
 	text-align: center;
 	margin-top: 25%;
 	margin-left: -40%;
@@ -6,9 +14,72 @@
 
 }
 
+input[type=text] {
+	background-color: #ffffff;
+	outline: none;
+	border: none;
+	border-color: #ffffff;
+	border-radius:4px
+	
+}
+
+
+input[type=text]:hover {
+	outline: none;
+	background-color: #ffffff;
+	border:none;
+	border-radius: 4px;
+}
+
+input[type=password] {
+	outline: none;
+	border: none;
+	border-radius:4px
+	
+}
+
+
+input[type=password]:hover {
+	outline: none;
+	border:none;
+	border-radius: 4px;
+}
+
+#topline1 {
+    border-bottom: 2px solid rgb(92, 167, 228);
+	border-width: 2px;
+	margin-top: 0%;
+	margin-left: -4%;
+	width: 70%;
+}
+
+#underline1 {
+	border-bottom: 2px solid rgb(92, 167, 228);
+	border-width: 1.5px;
+	margin-top: 0%;
+	margin-left: -20%;
+	width: 80%;
+}
+
+#topline2 {
+    border-bottom: 2px solid rgb(92, 167, 228);
+	border-width: 2px;
+	margin-top: -5%;
+	margin-left: -20%;
+	width: 80%;
+}
+
+#underline2 {
+	border-bottom: 2px solid rgb(92, 167, 228);
+	border-width: 2px;
+	margin-top: 0%;
+	margin-left: -5%;
+	width: 70%;
+}
+
 #homeLog{
     text-align: center;
-    padding-top: 3%;
+    padding-top: 4%;
 }
 
 #homePw{
@@ -100,6 +171,3 @@
   	background:#3c77e6;
   }
 
-.underline {
-	text-decoration: underline blue;
-	}
