--- a/src/main/react-frontend/src/components/css/ClickDate.css
+++ b/src/main/react-frontend/src/components/css/ClickDate.css
@@ -1,17 +1,79 @@
-#headline{
-    text-align: center;
-    margin-top: 10%;
-    margin-left: -60%;
-
+#headline {
+    margin-top: -13%;
+    margin-left: 5%;
 }
+
+#midline {
+    margin-left: 5%;
+}
+
+#top {
+    margin-top: 30%;
+}
+
+#mid {
+    margin-top: 30%;
+}
+
+#bt {
+    margin-top: 50%;
+}
+
+
+#blank{
+list-style: none;
+margin-left: -13%;
+text-decoration: none;
+}
+
+#color1 {
+    color: rgba(250, 180, 76, 0.979);
+}
+
+
+#date {
+    text-align: center;
+    margin-left: 50%;
+}
+
+#scroll{
+    width:360px;
+    height:630px;
+    overflow: auto;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+    outline-width: 5%;
+    border-radius: 20px 20px 20px 20px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #d6cdcdb0;
+} 
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(11, 109, 238, 0.61); 
+} 
+
+#kcal {
+    text-align: center;
+    margin-top: -15%;
+    margin-left: 60%;
+    font-size: large;
+}
+
+/* 
 
 #line1 {
     border-bottom: 2px solid #babec7;
     border-width: 2px;
+    
     margin-top: 3%;
 }
 
 #line2 {
     border-bottom: 2px solid #babec7;
-    margin-top: 145%;
+    
 } 
+ */
