Calendar.js 캘린더 css 적용

--- a/src/main/react-frontend/src/components/css/componentCss.css
+++ b/src/main/react-frontend/src/components/css/componentCss.css
@@ -34,6 +34,12 @@
 a:visited{color:black}
 a:link{color:black}
 
+.react-calendar{
+    margin-top: 30px;
+    position: relative;
+    left: 5px;
+}
+
 #clickDate{
     overflow:auto;
     width:360px;
