--- a/src/main/react-frontend/src/components/css/componentCss.css
+++ b/src/main/react-frontend/src/components/css/componentCss.css
@@ -36,12 +36,33 @@
 a:visited{color:black}
 a:link{color:black}
 
+
 .react-calendar{
     margin-top: 30px;
     position: relative;
     left: 5px;
 }
-
+/*
+#colorChart{
+    text-align: center;
+    position : relative;
+    top : 200px;
+    left: 60px;
+}
+#colorChart div{
+    float: left;
+    width : 25px;
+    height : 25px;
+    border-radius: 50%;
+}
+#lowColor {background: rgb(230, 230, 104); margin-right: 40px;}
+#midColor {background: rgb(83, 178, 236); margin-right: 40px;}
+#highColor {background: rgb(236, 125, 125);}
+*/
+#colorChart{
+    margin-top: 70px;
+    margin-left: 5px;
+}
 #clickDate{
     overflow:auto;
     width:360px;
