--- a/src/main/react-frontend/src/components/css/MenuImage.css
+++ b/src/main/react-frontend/src/components/css/MenuImage.css
@@ -6,6 +6,10 @@ text-align: center;
  object-fit: cover; 
 }
 
+#head {
+	margin-left: 5%;
+}
+
 .buttonMi {
 	width:150px;
 	  height: 40px;
@@ -17,7 +21,7 @@ text-align: center;
 	  border-radius: 30px;
 	  box-shadow: 0 4px 16px #ffffff;
 	  text-align: center;
-      margin-top: 80%;
+      margin-top: 40%;
       margin-left: 30%;
     
   }
@@ -40,8 +44,8 @@ text-align: center;
 	  text-align: center;
       margin-top: 5%;
       margin-left: 55%;
-    
   }
+
 .buttonMi2:hover{
 	background: hsl(216, 96%, 49%);
 	cursor: pointer;
@@ -54,10 +58,22 @@ text-align: center;
     width:60%;
     height:60%;
     margin: 17% auto;  
-    border-radius:50%;  
+	border-radius:50%;  
+	margin-left: 10%;
+	outline: rgb(16, 44, 44);
   }
+
   input[type='radio']:checked:before {
   	background:#3c77e6;
   }
 
-  
+  #left {
+	width: 13%;
+	margin-top: 20%;
+	margin-left: 13%;
+  }
+
+  #right {
+	  width: 13%;
+	  margin-left: 15%;
+  }
