--- a/src/main/react-frontend/src/components/css/Home.css
+++ b/src/main/react-frontend/src/components/css/Home.css
@@ -3,5 +3,13 @@
 }
 
 #register {
-    margin-top: 8%;
+    margin-top: 5%;
+}
+
+#menu{
+    margin-top: 15%;
+}
+
+#myPage {
+    margin-top: 5%;
 }
