--- a/src/main/react-frontend/src/components/css/ClickDate.css
+++ b/src/main/react-frontend/src/components/css/ClickDate.css
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Archivo:wght@700&family=Bowlby+One&family=Langar&family=Nanum+Gothic+Coding&family=Nanum+Gothic:wght@700&family=Noto+Sans+KR:wght@500;900&family=Racing+Sans+One&family=Tajawal:wght@900&display=swap');
+
+#font{
+    font-family: 'Archivo', sans-serif;
+    font-family: 'Bowlby One', cursive;
+    font-family: 'Langar', cursive;
+    font-family: 'Nanum Gothic', sans-serif;
+    font-family: 'Nanum Gothic Coding', monospace;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-family: 'Racing Sans One', cursive;
+    font-family: 'Tajawal', sans-serif;
+    font-weight: 600;
+    font-size: large;
+}
+
 #headline {
     margin-top: 0%;
     margin-left: 5%;
