--- a/src/main/react-frontend/src/components/css/MenuImage.css
+++ b/src/main/react-frontend/src/components/css/MenuImage.css
@@ -51,21 +51,7 @@ text-align: center;
 	cursor: pointer;
 	box-shadow: 0 2px 4px rgba(176, 175, 177, 0.6);
   }
-  
-  input[type='radio']:before {
-    content:'';
-    display:block;
-    width:60%;
-    height:60%;
-    margin: 17% auto;  
-	border-radius:50%;  
-	margin-left: 10%;
-	outline: rgb(16, 44, 44);
-  }
-
-  input[type='radio']:checked:before {
-  	background:#3c77e6;
-  }
+ 
 
   #left {
 	width: 13%;
@@ -77,3 +63,30 @@ text-align: center;
 	  width: 13%;
 	  margin-left: 15%;
   }
+
+  #radio1 {
+		margin-top: 9%;
+		margin-left: 5%;
+	}
+
+
+  #radio2 {
+		margin-top: -6.5%;
+		margin-left: 23%;
+}
+
+  #radio3 {
+	margin-top: -6.5%;
+	margin-left: 43%;
+}
+
+#radio4 {
+	margin-top: -6.5%;
+	margin-left: 63%;
+}
+
+
+#radio5 {
+	margin-top: -6.5%;
+	margin-left: 83%;
+}
