--- a/src/main/react-frontend/src/components/css/MenuUpload.css
+++ b/src/main/react-frontend/src/components/css/MenuUpload.css
@@ -13,3 +13,26 @@
     margin-top: 1%;
 
 }
+
+#file {display:none;}
+
+.button2 {
+	width:220px;
+	  height: 40px;
+	  color:rgb(255, 255, 255);
+	  background: hsl(204, 59%, 58%);
+	  font-size: 25px;
+	  font-weight: bold;
+	  border: 2px solid hsl(204, 80%, 44%);
+	  border-radius: 30px;
+	  box-shadow: 0 4px 16px #ffffff;
+	  text-align: center;
+	  margin-top: 40%;
+ 
+  }
+  
+.button2:hover{
+	  background: hsla(204, 41%, 50%, 0.863);
+	  cursor: pointer;
+	  box-shadow: 0 2px 4px rgba(176, 175, 177, 0.6);
+  }
