Calendar 요청 덜했는데...

--- a/src/main/react-frontend/src/components/css/componentCss.css
+++ b/src/main/react-frontend/src/components/css/componentCss.css
@@ -38,7 +38,13 @@
 a:visited{color:black}
 a:link{color:black}
 
+#calendarHead {
+	text-align: center;
+	margin-top: 10%;
+	margin-left: -50%;
+	font-weight: 100%;
 
+}
 .react-calendar{
     margin-top: 30px;
     position: relative;
