--- a/src/main/react-frontend/src/components/css/MenuImage.css
+++ b/src/main/react-frontend/src/components/css/MenuImage.css
@@ -1,96 +1,191 @@
 
 #imgsize{ 
 text-align: center;
- max-width: 200px;
- max-height: 250px;
- object-fit: cover; 
+	max-width: 200px;
+	max-height: 250px;
+	object-fit: cover; 
 }
 
 #head {
-	margin-left: 5%;
+margin-left: 5%;
 }
 
 .buttonMi {
-	width:150px;
-	  height: 40px;
-	  color:rgb(255, 255, 255);
-	  background: hsl(212, 88%, 52%);
-	  font-size: 20px;
-	  font-weight: bold;
-	  border: 2px solid hsl(204, 80%, 44%);
-	  border-radius: 30px;
-	  box-shadow: 0 4px 16px #ffffff;
-	  text-align: center;
-      margin-top: 20%;
-      margin-left: 30%;
-    
-  }
-  .buttonMi:hover{
-	background: hsl(216, 96%, 49%);
-	cursor: pointer;
-	box-shadow: 0 2px 4px rgba(176, 175, 177, 0.6);
-  }
-
-  .buttonMi2 {
-	width:150px;
-	  height: 40px;
-	  color:rgb(255, 255, 255);
-	  background: hsl(212, 88%, 52%);
-	  font-size: 20px;
-	  font-weight: bold;
-	  border: 2px solid hsl(204, 80%, 44%);
-	  border-radius: 30px;
-	  box-shadow: 0 4px 16px #ffffff;
-	  text-align: center;
-      margin-top: 5%;
-      margin-left: 55%;
-  }
-
-.buttonMi2:hover{
-	background: hsl(216, 96%, 49%);
-	cursor: pointer;
-	box-shadow: 0 2px 4px rgba(176, 175, 177, 0.6);
-  }
- 
-
-  #left {
-	width: 13%;
+width:130px;
+	height: 40px;
+	color:rgb(255, 255, 255);
+	background: hsl(212, 88%, 52%);
+	font-size: 20px;
+	font-weight: bold;
+	border: 2px solid hsl(204, 80%, 44%);
+	border-radius: 30px;
+	box-shadow: 0 4px 16px #ffffff;
+	text-align: center;
 	margin-top: 20%;
-	margin-left: 13%;
-  }
+	margin-left: 32%;
 
-  #right {
-	  width: 13%;
-	  margin-left: 15%;
-  }
-
-  #radio1 {
-		margin-top: 9%;
-		margin-left: 5%;
-	}
-
-
-  #radio2 {
-		margin-top: -6.5%;
-		margin-left: 23%;
+}
+.buttonMi:hover{
+background: hsl(216, 96%, 49%);
+cursor: pointer;
+box-shadow: 0 2px 4px rgba(176, 175, 177, 0.6);
 }
 
-  #radio3 {
-	margin-top: -6.5%;
-	margin-left: 43%;
+.buttonMi2 {
+width:130px;
+height: 40px;
+color:rgb(255, 255, 255);
+background: hsl(212, 88%, 52%);
+font-size: 20px;
+font-weight: bold;
+border: 2px solid hsl(204, 80%, 44%);
+border-radius: 30px;
+box-shadow: 0 4px 16px #ffffff;
+text-align: center;
+margin-top: 5%;
+margin-left: 60%;
+}
+
+.buttonMi2:hover{
+background: hsl(216, 96%, 49%);
+cursor: pointer;
+box-shadow: 0 2px 4px rgba(176, 175, 177, 0.6);
+}
+
+
+#left {
+width: 13%;
+margin-top: 20%;
+margin-left: 13%;
+}
+
+#right {
+width: 13%;
+margin-left: 15%;
+}
+
+#radio1 {
+margin-top: 9%;
+margin-left: 5%;
+}
+
+
+#radio2 {
+margin-top: -6.5%;
+margin-left: 23%;
+}
+
+#radio3 {
+margin-top: -6.5%;
+margin-left: 43%;
 }
 
 #radio4 {
-	margin-top: -6.5%;
-	margin-left: 63%;
+margin-top: -6.5%;
+margin-left: 63%;
 }
 
 
 #radio5 {
-	margin-top: -6.5%;
-	margin-left: 83%;
+margin-top: -6.5%;
+margin-left: 83%;
 }
 
 #interval {
-	margin-top: 10%;
+margin-top: 10%;
+}
+#imgsize{ 
+text-align: center;
+max-width: 200px;
+max-height: 250px;
+object-fit: cover; 
+}
+
+#head {
+margin-left: 5%;
+}
+
+.buttonMi {
+width:130px;
+	height: 40px;
+	color:rgb(255, 255, 255);
+	background: hsl(212, 88%, 52%);
+	font-size: 20px;
+	font-weight: bold;
+	border: 2px solid hsl(204, 80%, 44%);
+	border-radius: 30px;
+	box-shadow: 0 4px 16px #ffffff;
+	text-align: center;
+	margin-top: 20%;
+	margin-left: 32%;
+
+}
+.buttonMi:hover{
+background: hsl(216, 96%, 49%);
+cursor: pointer;
+box-shadow: 0 2px 4px rgba(176, 175, 177, 0.6);
+}
+
+.buttonMi2 {
+width:130px;
+	height: 40px;
+	color:rgb(255, 255, 255);
+	background: hsl(212, 88%, 52%);
+	font-size: 20px;
+	font-weight: bold;
+	border: 2px solid hsl(204, 80%, 44%);
+	border-radius: 30px;
+	box-shadow: 0 4px 16px #ffffff;
+	text-align: center;
+	margin-top: 5%;
+	margin-left: 60%;
+}
+
+.buttonMi2:hover{
+background: hsl(216, 96%, 49%);
+cursor: pointer;
+box-shadow: 0 2px 4px rgba(176, 175, 177, 0.6);
+}
+
+
+#left {
+width: 13%;
+margin-top: 20%;
+margin-left: 13%;
+}
+
+#right {
+	width: 13%;
+	margin-left: 15%;
+}
+
+#radio1 {
+	margin-top: 9%;
+	margin-left: 5%;
+}
+
+
+#radio2 {
+	margin-top: -6.5%;
+	margin-left: 23%;
+}
+
+#radio3 {
+margin-top: -6.5%;
+margin-left: 43%;
+}
+
+#radio4 {
+margin-top: -6.5%;
+margin-left: 63%;
+}
+
+
+#radio5 {
+margin-top: -6.5%;
+margin-left: 83%;
+}
+
+#interval {
+margin-top: 10%;
 }
