--- a/src/main/react-frontend/src/components/css/MenuUpload.css
+++ b/src/main/react-frontend/src/components/css/MenuUpload.css
@@ -1,40 +1,38 @@
 #homeUp{
-    text-align: center;
+text-align: center;
 }
 
 #header {
-    margin-top: 25%;
+margin-top: 25%;
 }
 
 .imgsize{
-    text-align: center;
-    width: 30%;
-    height: 30%;
-	margin-top: 10%;
+text-align: center;
+width: 30%;
+height: 30%;
+margin-top: 10%;
 
 }
 
 #file {display:none;}
 
 input[type='submit'] {
-	width:90px;
+width:120px;
 	height: 40px;
 	color:rgb(255, 255, 255);
-	background: hsl(234, 84%, 62%);
-	font-size: 25px;
+	background: hsl(212, 88%, 52%);
+	font-size: 20px;
 	font-weight: bold;
-	border: 2px solid hsl(0, 0%, 97%);
+	border: 2px solid hsl(204, 80%, 44%);
 	border-radius: 30px;
 	box-shadow: 0 4px 16px #ffffff;
 	text-align: center;
-	margin-top: 25%;
-	font-size: large;
-  }
+	margin-top: 20%;
 
-  input[type='submit']:hover {
-	background: hsl(234, 79%, 68%);
-	text-align: center;
-	margin-top: 25%;
-	font-size: large;
-  }
- 
+}
+
+input[type='submit']:hover {
+background: hsl(216, 96%, 49%);
+cursor: pointer;
+box-shadow: 0 2px 4px rgba(176, 175, 177, 0.6);
+}
